compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__generate_json_encoder_for_variants_with_mixed_fields.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 6592
expression: "\npub type Wibble {\n  Wibble\n  Wobble(field: String, field1: Int)\n}\n"
snapshot_kind: text
---
----- BEFORE ACTION

pub type Wibble {
    ↑            
  Wibble
  Wobble(field: String, field1: Int)
}


----- AFTER ACTION
import gleam/json

pub type Wibble {
  Wibble
  Wobble(field: String, field1: Int)
}

fn wibble_to_json(wibble: Wibble) -> json.Json {
  case wibble {
    Wibble -> json.object([
      #("type", json.string("wibble")),
    ])
    Wobble(field:, field1:) -> json.object([
      #("type", json.string("wobble")),
      #("field", json.string(field)),
      #("field1", json.int(field1)),
    ])
  }
}
