compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__generate_json_encoder_list_of_tuples.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub type Wibble {\n  Wibble(values: List(#(Int, String)))\n}\n"
---
----- BEFORE ACTION

pub type Wibble {
    ↑            
  Wibble(values: List(#(Int, String)))
}


----- AFTER ACTION
import gleam/json

pub type Wibble {
  Wibble(values: List(#(Int, String)))
}

fn encode_wibble(wibble: Wibble) -> json.Json {
  json.object([
    #("values", json.array(wibble.values, fn(value) {
      json.preprocessed_array([
        json.int(value.0),
        json.string(value.1),
      ])
    })),
  ])
}
