compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__import_module.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "apply_first_code_action(r#\"pub fn main() {\n    result.is_ok()\n}\"#, 1)"
---
import result

pub fn main() {
    result.is_ok()
}
