compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__import_path_module.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "apply_first_code_action(r#\"pub fn main() {\n    io.println(\"Hello, world!\")\n}\"#,\n    1)"
---
import gleam/io

pub fn main() {
    io.println("Hello, world!")
}
