compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__import_similar_module.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main() {\n  reul.is_ok()\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  reul.is_ok()
  ▔▔▔▔↑       
}


----- AFTER ACTION
import result

pub fn main() {
  result.is_ok()
}
