compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__label_shorthand_action_works_on_labelled_call_args.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "apply_first_code_action_with_title(r#\"pub fn main() {\n    let arg1 = 1\n    let arg2 = 2\n    wibble(arg2: arg2, arg1: arg1)\n}\n\npub fn wibble(arg1 arg1, arg2 arg2) { Nil }\n\"#,\n    3, USE_LABEL_SHORTHAND_SYNTAX)"
---
pub fn main() {
    let arg1 = 1
    let arg2 = 2
    wibble(arg2: , arg1: )
}

pub fn wibble(arg1 arg1, arg2 arg2) { Nil }
